@@ -5,6 +5,7 @@
 	* CORE: Added optimization to AND and OR queries to reduce the parens in the generated query.  Thanks to devjta.
 	* CORE: Removed some extraneous spaces from generated queries.
 	* CORE: Added missing wiring for the TIME_STAMP_STRING data type for storing Timestamp type as a string.
+	* CORE: Added some list convenience methods to the eager and lazy foreign collections.  Thanks to mlipmanx.
 	* JDBC: Update the DB2 driver class.  Thanks to mauro-palumbo.
 	* JDBC: Added support for create table if not exists for HSQLDB versions 2.3.X and greater.  Thanks to lukewhitt.
 
